recursion.lessons.recursion.koch.Koch.scala.error
Koch:12: error: value !=- is not a member of Double
	if (length!=-1) {
                  ^